boxddd-sys/third-party/box3d/include/box3d/types.h

typedef struct b3VoxelData b3VoxelData;
typedef void b3TaskCallback( void* taskContext );
typedef void* b3EnqueueTaskCallback( b3TaskCallback* task, void* taskContext, void* userContext, const char* taskName );
typedef void b3FinishTaskCallback( void* userTask, void* userContext );
typedef struct b3DebugShape b3DebugShape;
typedef void* b3CreateDebugShapeCallback( const b3DebugShape* debugShape, void* userContext );
typedef void b3DestroyDebugShapeCallback( void* userShape, void* userContext );
typedef float b3FrictionCallback( float frictionA, uint64_t userMaterialIdA, float frictionB, uint64_t userMaterialIdB );
typedef float b3RestitutionCallback( float restitutionA, uint64_t userMaterialIdA, float restitutionB, uint64_t userMaterialIdB );
typedef bool b3CustomFilterFcn( b3ShapeId shapeIdA, b3ShapeId shapeIdB, void* context );
typedef bool b3PreSolveFcn( b3ShapeId shapeIdA, b3ShapeId shapeIdB, b3Pos point, b3Vec3 normal, void* context );
typedef bool b3OverlapResultFcn( b3ShapeId shapeId, void* context );
typedef float b3CastResultFcn( b3ShapeId shapeId, b3Pos point, b3Vec3 normal, float fraction, uint64_t userMaterialId,
							   int triangleIndex, int childIndex, void* context );
typedef struct b3Capacity
{
	int staticShapeCount;
	int dynamicShapeCount;
	int staticBodyCount;
	int dynamicBodyCount;
	int contactCount;
} b3Capacity;
typedef struct b3WorldDef
{
	b3Vec3 gravity;
	float restitutionThreshold;
	float hitEventThreshold;
	float contactHertz;
	float contactDampingRatio;
	float contactSpeed;
	float maximumLinearSpeed;
	b3FrictionCallback* frictionCallback;
	b3RestitutionCallback* restitutionCallback;
	bool enableSleep;
	bool enableContinuous;
	uint32_t workerCount;
	b3EnqueueTaskCallback* enqueueTask;
	b3FinishTaskCallback* finishTask;
	void* userTaskContext;
	void* userData;
	b3CreateDebugShapeCallback* createDebugShape;
	b3DestroyDebugShapeCallback* destroyDebugShape;
	void* userDebugShapeContext;
	b3Capacity capacity;
	int internalValue;
} b3WorldDef;
B3_API b3WorldDef b3DefaultWorldDef( void );
typedef struct b3Filter
{
	uint64_t categoryBits;
	uint64_t maskBits;
	int groupIndex;
} b3Filter;
typedef struct b3SurfaceMaterial
{
	float friction;
	float restitution;
	float rollingResistance;
	b3Vec3 tangentVelocity;
	uint64_t userMaterialId;
	uint32_t customColor;
	uint32_t padding;
} b3SurfaceMaterial;
typedef enum b3ShapeType
{
	b3_capsuleShape,
	b3_compoundShape,
	b3_heightShape,
	b3_hullShape,
	b3_meshShape,
	b3_sphereShape,
	b3_voxelShape,
	b3_shapeTypeCount
} b3ShapeType;
typedef struct b3ShapeDef
{
	const char* name;
	void* userData;
	b3SurfaceMaterial* materials;
	int materialCount;
	b3SurfaceMaterial baseMaterial;
	float density;
	float explosionScale;
	b3Filter filter;
	bool enableCustomFiltering;
	bool isSensor;
	bool enableSensorEvents;
	bool enableContactEvents;
	bool enableHitEvents;
	bool enablePreSolveEvents;
	bool invokeContactCreation;
	bool updateBodyMass;
	bool enableSpeculativeContact;
	int internalValue;
} b3ShapeDef;
typedef struct b3Sphere
{
	b3Vec3 center;
	float radius;
} b3Sphere;
typedef struct b3Capsule
{
	b3Vec3 center1;
	b3Vec3 center2;
	float radius;
} b3Capsule;
typedef struct b3HullData
{
	uint64_t version;
	uint64_t hash;
	b3AABB aabb;
	float surfaceArea;
	float volume;
	float innerRadius;
	b3Vec3 center;
	b3Matrix3 centralInertia;
	int32_t vertexCount;
	int32_t vertexOffset;
	int32_t pointOffset;
	int32_t edgeCount;
	int32_t edgeOffset;
	int32_t faceCount;
	int32_t planeOffset;
	int32_t faceOffset;
	int32_t soaVertexOffset;
	int32_t soaNormalOffset;
	int32_t byteCount;
} b3HullData;
typedef struct b3Mesh
{
	const b3MeshData* data;
	b3Vec3 scale;
} b3Mesh;
typedef struct b3HeightFieldData
{
	uint64_t version;
	uint64_t hash;
	int byteCount;
	b3AABB aabb;
	float minHeight;
	float maxHeight;
	float heightScale;
	b3Vec3 scale;
	int32_t columnCount;
	int32_t rowCount;
	int32_t heightsOffset;
	int32_t materialOffset;
	int32_t flagsOffset;
	uint8_t clockwise;
	uint8_t padding[7];
} b3HeightFieldData;
typedef struct b3CompoundData
{
	uint64_t version;
	int byteCount;
	int nodeOffset;
	b3DynamicTree tree;
	int materialOffset;
	int materialCount;
	int capsuleOffset;
	int capsuleCount;
	int hullOffset;
	int hullCount;
	int sharedHullCount;
	int meshOffset;
	int meshCount;
	int sharedMeshCount;
	int sphereOffset;
	int sphereCount;
} b3CompoundData;
typedef enum b3HexColor
{
	b3_colorAliceBlue = 0xF0F8FF,
	b3_colorAntiqueWhite = 0xFAEBD7,
	b3_colorAqua = 0x00FFFF,
	b3_colorAquamarine = 0x7FFFD4,
	b3_colorAzure = 0xF0FFFF,
	b3_colorBeige = 0xF5F5DC,
	b3_colorBisque = 0xFFE4C4,
	b3_colorBlack = 0x000000,
	b3_colorBlanchedAlmond = 0xFFEBCD,
	b3_colorBlue = 0x0000FF,
	b3_colorBlueViolet = 0x8A2BE2,
	b3_colorBrown = 0xA52A2A,
	b3_colorBurlywood = 0xDEB887,
	b3_colorCadetBlue = 0x5F9EA0,
	b3_colorChartreuse = 0x7FFF00,
	b3_colorChocolate = 0xD2691E,
	b3_colorCoral = 0xFF7F50,
	b3_colorCornflowerBlue = 0x6495ED,
	b3_colorCornsilk = 0xFFF8DC,
	b3_colorCrimson = 0xDC143C,
	b3_colorCyan = 0x00FFFF,
	b3_colorDarkBlue = 0x00008B,
	b3_colorDarkCyan = 0x008B8B,
	b3_colorDarkGoldenRod = 0xB8860B,
	b3_colorDarkGray = 0xA9A9A9,
	b3_colorDarkGreen = 0x006400,
	b3_colorDarkKhaki = 0xBDB76B,
	b3_colorDarkMagenta = 0x8B008B,
	b3_colorDarkOliveGreen = 0x556B2F,
	b3_colorDarkOrange = 0xFF8C00,
	b3_colorDarkOrchid = 0x9932CC,
	b3_colorDarkRed = 0x8B0000,
	b3_colorDarkSalmon = 0xE9967A,
	b3_colorDarkSeaGreen = 0x8FBC8F,
	b3_colorDarkSlateBlue = 0x483D8B,
	b3_colorDarkSlateGray = 0x2F4F4F,
	b3_colorDarkTurquoise = 0x00CED1,
	b3_colorDarkViolet = 0x9400D3,
	b3_colorDeepPink = 0xFF1493,
	b3_colorDeepSkyBlue = 0x00BFFF,
	b3_colorDimGray = 0x696969,
	b3_colorDodgerBlue = 0x1E90FF,
	b3_colorFireBrick = 0xB22222,
	b3_colorFloralWhite = 0xFFFAF0,
	b3_colorForestGreen = 0x228B22,
	b3_colorFuchsia = 0xFF00FF,
	b3_colorGainsboro = 0xDCDCDC,
	b3_colorGhostWhite = 0xF8F8FF,
	b3_colorGold = 0xFFD700,
	b3_colorGoldenRod = 0xDAA520,
	b3_colorGray = 0x808080,
	b3_colorGreen = 0x008000,
	b3_colorGreenYellow = 0xADFF2F,
	b3_colorHoneyDew = 0xF0FFF0,
	b3_colorHotPink = 0xFF69B4,
	b3_colorIndianRed = 0xCD5C5C,
	b3_colorIndigo = 0x4B0082,
	b3_colorIvory = 0xFFFFF0,
	b3_colorKhaki = 0xF0E68C,
	b3_colorLavender = 0xE6E6FA,
	b3_colorLavenderBlush = 0xFFF0F5,
	b3_colorLawnGreen = 0x7CFC00,
	b3_colorLemonChiffon = 0xFFFACD,
	b3_colorLightBlue = 0xADD8E6,
	b3_colorLightCoral = 0xF08080,
	b3_colorLightCyan = 0xE0FFFF,
	b3_colorLightGoldenRodYellow = 0xFAFAD2,
	b3_colorLightGray = 0xD3D3D3,
	b3_colorLightGreen = 0x90EE90,
	b3_colorLightPink = 0xFFB6C1,
	b3_colorLightSalmon = 0xFFA07A,
	b3_colorLightSeaGreen = 0x20B2AA,
	b3_colorLightSkyBlue = 0x87CEFA,
	b3_colorLightSlateGray = 0x778899,
	b3_colorLightSteelBlue = 0xB0C4DE,
	b3_colorLightYellow = 0xFFFFE0,
	b3_colorLime = 0x00FF00,
	b3_colorLimeGreen = 0x32CD32,
	b3_colorLinen = 0xFAF0E6,
	b3_colorMagenta = 0xFF00FF,
	b3_colorMaroon = 0x800000,
	b3_colorMediumAquaMarine = 0x66CDAA,
	b3_colorMediumBlue = 0x0000CD,
	b3_colorMediumOrchid = 0xBA55D3,
	b3_colorMediumPurple = 0x9370DB,
	b3_colorMediumSeaGreen = 0x3CB371,
	b3_colorMediumSlateBlue = 0x7B68EE,
	b3_colorMediumSpringGreen = 0x00FA9A,
	b3_colorMediumTurquoise = 0x48D1CC,
	b3_colorMediumVioletRed = 0xC71585,
	b3_colorMidnightBlue = 0x191970,
	b3_colorMintCream = 0xF5FFFA,
	b3_colorMistyRose = 0xFFE4E1,
	b3_colorMoccasin = 0xFFE4B5,
	b3_colorNavajoWhite = 0xFFDEAD,
	b3_colorNavy = 0x000080,
	b3_colorOldLace = 0xFDF5E6,
	b3_colorOlive = 0x808000,
	b3_colorOliveDrab = 0x6B8E23,
	b3_colorOrange = 0xFFA500,
	b3_colorOrangeRed = 0xFF4500,
	b3_colorOrchid = 0xDA70D6,
	b3_colorPaleGoldenRod = 0xEEE8AA,
	b3_colorPaleGreen = 0x98FB98,
	b3_colorPaleTurquoise = 0xAFEEEE,
	b3_colorPaleVioletRed = 0xDB7093,
	b3_colorPapayaWhip = 0xFFEFD5,
	b3_colorPeachPuff = 0xFFDAB9,
	b3_colorPeru = 0xCD853F,
	b3_colorPink = 0xFFC0CB,
	b3_colorPlum = 0xDDA0DD,
	b3_colorPowderBlue = 0xB0E0E6,
	b3_colorPurple = 0x800080,
	b3_colorRebeccaPurple = 0x663399,
	b3_colorRed = 0xFF0000,
	b3_colorRosyBrown = 0xBC8F8F,
	b3_colorRoyalBlue = 0x4169E1,
	b3_colorSaddleBrown = 0x8B4513,
	b3_colorSalmon = 0xFA8072,
	b3_colorSandyBrown = 0xF4A460,
	b3_colorSeaGreen = 0x2E8B57,
	b3_colorSeaShell = 0xFFF5EE,
	b3_colorSienna = 0xA0522D,
	b3_colorSilver = 0xC0C0C0,
	b3_colorSkyBlue = 0x87CEEB,
	b3_colorSlateBlue = 0x6A5ACD,
	b3_colorSlateGray = 0x708090,
	b3_colorSnow = 0xFFFAFA,
	b3_colorSpringGreen = 0x00FF7F,
	b3_colorSteelBlue = 0x4682B4,
	b3_colorTan = 0xD2B48C,
	b3_colorTeal = 0x008080,
	b3_colorThistle = 0xD8BFD8,
	b3_colorTomato = 0xFF6347,
	b3_colorTurquoise = 0x40E0D0,
	b3_colorViolet = 0xEE82EE,
	b3_colorWheat = 0xF5DEB3,
	b3_colorWhite = 0xFFFFFF,
	b3_colorWhiteSmoke = 0xF5F5F5,
	b3_colorYellow = 0xFFFF00,
	b3_colorYellowGreen = 0x9ACD32,
	b3_colorBox2DRed = 0xDC3132,
	b3_colorBox2DBlue = 0x30AEBF,
	b3_colorBox2DGreen = 0x8CC924,
	b3_colorBox2DYellow = 0xFFEE8C
} b3HexColor;
typedef struct b3DebugShape
{
	b3ShapeId shapeId;
	b3ShapeType type;
	union
	{
		const b3Capsule* capsule;			  
		const b3CompoundData* compound;		  
		const b3HeightFieldData* heightField; 
		const b3HullData* hull;				  
		const b3Mesh* mesh;					  
		const b3Sphere* sphere;				  
		const b3VoxelData* voxel;			  
	};
} b3DebugShape;
typedef struct b3DebugDraw
{
	void ( *DrawShapeFcn )( void* userShape, b3WorldTransform transform, b3HexColor color, void* context );
	void ( *DrawSegmentFcn )( b3Pos p1, b3Pos p2, b3HexColor color, void* context );
	void ( *DrawTransformFcn )( b3WorldTransform transform, void* context );
	void ( *DrawPointFcn )( b3Pos p, float size, b3HexColor color, void* context );
	void ( *DrawSphereFcn )( b3Pos p, float radius, b3HexColor color, float alpha, void* context );
	void ( *DrawCapsuleFcn )( b3Pos p1, b3Pos p2, float radius, b3HexColor color, float alpha, void* context );
	void ( *DrawBoundsFcn )( b3AABB aabb, b3HexColor color, void* context );
	void ( *DrawBoxFcn )( b3Vec3 extents, b3WorldTransform transform, b3HexColor color, void* context );
	void ( *DrawStringFcn )( b3Pos p, const char* s, b3HexColor color, void* context );
	b3AABB drawingBounds;
	float forceScale;
	float jointScale;
	bool drawShapes;
	bool drawJoints;
	bool drawJointExtras;
	bool drawBounds;
	bool drawMass;
	bool drawSleep;
	bool drawBodyNames;
	bool drawContacts;
	bool drawAnchorA;
	bool drawGraphColors;
	bool drawContactFeatures;
	bool drawContactNormals;
	bool drawContactForces;
	bool drawIslands;
	void* context;
} b3DebugDraw;