boxddd-sys/src/bindings_pregenerated.rs

/** Task interface
 This is the prototype for a Box3D task. Your task system is expected to run this callback on a worker thread,
 exactly once per enqueue, passing back the same taskContext pointer supplied to b3EnqueueTaskCallback.
 @ingroup world*/
pub type b3TaskCallback = ::std::option::Option<
    unsafe extern "C" fn(taskContext: *mut ::std::os::raw::c_void),
>;
/** These functions can be provided to Box3D to invoke a task system.
 Returns a pointer to the user's task object. May be nullptr. A nullptr indicates to Box3D that the work was executed
 serially within the callback and there is no need to call b3FinishTaskCallback. Otherwise the returned
 value must be non-null will be passed to b3FinishTaskCallback as the userTask.
 @param task the Box3D task to be called by the scheduler
 @param taskContext the Box3D context object that the scheduler must pass to the task
 @param userContext the scheduler context object that is opaque to Box3D
 @param taskName the Box3D task name that the scheduler can use for diagnostics
 @ingroup world*/
pub type b3EnqueueTaskCallback = ::std::option::Option<
    unsafe extern "C" fn(
        task: b3TaskCallback,
        taskContext: *mut ::std::os::raw::c_void,
        userContext: *mut ::std::os::raw::c_void,
        taskName: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_void,
>;
/** Finishes a user task object that wraps a Box3D task. This must block until the task has completed.
 The step blocks here on the tasks it spawned, so b3World_Step holds its stack across every
 fork/join. Drive it from a thread you can dedicate to the step, or from a fiber this callback can
 park to free the underlying thread. In a job system that cannot park a job's stack, do not call
 b3World_Step from inside a job: a job that blocks on its own sub-jobs without yielding its thread
 can deadlock. The in-tree scheduler instead runs other pending tasks on the waiting thread.
 @ingroup world*/
pub type b3FinishTaskCallback = ::std::option::Option<
    unsafe extern "C" fn(
        userTask: *mut ::std::os::raw::c_void,
        userContext: *mut ::std::os::raw::c_void,
    ),
>;
/** The user needs to be able to create debug draw shapes for multi-pass rendering to work efficiently.
 These user shapes are created and destroyed via callback so they can be bound to shape lifetime and scaling updates.
 @ingroup debug_draw*/
pub type b3CreateDebugShapeCallback = ::std::option::Option<
    unsafe extern "C" fn(
        debugShape: *const b3DebugShape,
        userContext: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void,
>;
pub type b3DestroyDebugShapeCallback = ::std::option::Option<
    unsafe extern "C" fn(
        userShape: *mut ::std::os::raw::c_void,
        userContext: *mut ::std::os::raw::c_void,
    ),
>;
/** Optional friction mixing callback. This intentionally provides no context objects because this is called
 from a worker thread.
 @warning This function should not attempt to modify Box3D state or user application state.
 @ingroup world*/
pub type b3FrictionCallback = ::std::option::Option<
    unsafe extern "C" fn(
        frictionA: f32,
        userMaterialIdA: u64,
        frictionB: f32,
        userMaterialIdB: u64,
    ) -> f32,
>;
/** Optional restitution mixing callback. This intentionally provides no context objects because this is called
 from a worker thread.
 @warning This function should not attempt to modify Box3D state or user application state.
 @ingroup world*/
pub type b3RestitutionCallback = ::std::option::Option<
    unsafe extern "C" fn(
        restitutionA: f32,
        userMaterialIdA: u64,
        restitutionB: f32,
        userMaterialIdB: u64,
    ) -> f32,
>;
/** Prototype for a contact filter callback.
 This is called when a contact pair is considered for collision. This allows you to
 perform custom logic to prevent collision between shapes. This is only called if
 one of the two shapes has custom filtering enabled. @see b3ShapeDef.
 Notes:
 - this function must be thread-safe
 - this is only called if one of the two shapes has enabled custom filtering
 - this is called only for awake dynamic bodies
 Return false if you want to disable the collision
 @warning Do not attempt to modify the world inside this callback
 @ingroup world*/
pub type b3CustomFilterFcn = ::std::option::Option<
    unsafe extern "C" fn(
        shapeIdA: b3ShapeId,
        shapeIdB: b3ShapeId,
        context: *mut ::std::os::raw::c_void,
    ) -> bool,
>;
/** Prototype for a pre-solve callback.
 This is called after a contact is updated. This allows you to inspect a
 collision before it goes to the solver.
 Notes:
 - this function must be thread-safe
 - this is only called if the shape has enabled pre-solve events
 - this may be called for awake dynamic bodies and sensors
 - this is not called for sensors
 Return false if you want to disable the contact this step
 This has limited information because it is used during CCD which does not have the
 full contact manifold.
 @warning Do not attempt to modify the world inside this callback
 @ingroup world*/
pub type b3PreSolveFcn = ::std::option::Option<
    unsafe extern "C" fn(
        shapeIdA: b3ShapeId,
        shapeIdB: b3ShapeId,
        point: b3Pos,
        normal: b3Vec3,
        context: *mut ::std::os::raw::c_void,
    ) -> bool,
>;
/** Prototype callback for overlap queries.
 Called for each shape found in the query.
 @see b3World_OverlapAABB
 @return false to terminate the query.
 @ingroup world*/
pub type b3OverlapResultFcn = ::std::option::Option<
    unsafe extern "C" fn(
        shapeId: b3ShapeId,
        context: *mut ::std::os::raw::c_void,
    ) -> bool,
>;
/** Prototype callback for ray casts.
 Called for each shape found in the query. You control how the ray cast
 proceeds by returning a float:
 return -1: ignore this shape and continue
 return 0: terminate the ray cast
 return fraction: clip the ray to this point
 return 1: don't clip the ray and continue
 @param shapeId the shape hit by the ray
 @param point the point of initial intersection
 @param normal the normal vector at the point of intersection
 @param fraction the fraction along the ray at the point of intersection
 @param userMaterialId the shape or triangle surface type
 @param triangleIndex the triangle index for mesh or height field shapes or -1 for other shape types
 @param childIndex the child shape index for compound shapes
 @param context the user context
 @return -1 to filter, 0 to terminate, fraction to clip the ray for closest hit, 1 to continue
 @see b3World_CastRay
 @ingroup world*/
pub type b3CastResultFcn = ::std::option::Option<
    unsafe extern "C" fn(
        shapeId: b3ShapeId,
        point: b3Pos,
        normal: b3Vec3,
        fraction: f32,
        userMaterialId: u64,
        triangleIndex: ::std::os::raw::c_int,
        childIndex: ::std::os::raw::c_int,
        context: *mut ::std::os::raw::c_void,
    ) -> f32,
>;
/** Optional world capacities that can be use to avoid run-time allocations
 @ingroup world*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3Capacity {
    /// Number of expected static shapes.
    pub staticShapeCount: ::std::os::raw::c_int,
    /// Number of expected dynamic and kinematic shapes.
    pub dynamicShapeCount: ::std::os::raw::c_int,
    /// Number of expected static bodies.
    pub staticBodyCount: ::std::os::raw::c_int,
    /// Number of expected dynamic and kinematic bodies.
    pub dynamicBodyCount: ::std::os::raw::c_int,
    /// Number of expected contacts.
    pub contactCount: ::std::os::raw::c_int,
}
/** World definition used to create a simulation world. Must be initialized using b3DefaultWorldDef.
 @ingroup world*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3WorldDef {
    /// Gravity vector. Box3D has no up-vector defined.
    pub gravity: b3Vec3,
    /** Restitution speed threshold, usually in m/s. Collisions above this
 speed have restitution applied (will bounce).*/
    pub restitutionThreshold: f32,
    /** Hit event speed threshold, usually in m/s. Collisions above this
 speed can generate hit events if the shape also enables hit events.*/
    pub hitEventThreshold: f32,
    /// Contact stiffness. Cycles per second. Increasing this increases the speed of overlap recovery, but can introduce jitter.
    pub contactHertz: f32,
    /** Contact bounciness. Non-dimensional. You can speed up overlap recovery by decreasing this with
 the trade-off that overlap resolution becomes more energetic.*/
    pub contactDampingRatio: f32,
    /** This parameter controls how fast overlap is resolved and usually has units of meters per second. This only
 puts a cap on the resolution speed. The resolution speed is increased by increasing the hertz and/or
 decreasing the damping ratio.*/
    pub contactSpeed: f32,
    /// Maximum linear speed. Usually meters per second.
    pub maximumLinearSpeed: f32,
    /// Optional mixing callback for friction. The default uses sqrt(frictionA * frictionB).
    pub frictionCallback: b3FrictionCallback,
    /// Optional mixing callback for restitution. The default uses max(restitutionA, restitutionB).
    pub restitutionCallback: b3RestitutionCallback,
    /// Can bodies go to sleep to improve performance
    pub enableSleep: bool,
    /// Enable continuous collision
    pub enableContinuous: bool,
    /** Number of workers to use with the provided task system. Box3D performs best when using only
 performance cores and accessing a single L2 cache. Efficiency cores and hyper-threading provide
 little benefit and may even harm performance.
 This is clamped to the range [1, B3_MAX_WORKERS]. Using a value above 1 will turn on multithreading.
 If task callbacks are provided then Box3D will use the user provided task system. Otherwise Box3D
 will create threads and use an internal scheduler.*/
    pub workerCount: u32,
    /// function to spawn task
    pub enqueueTask: b3EnqueueTaskCallback,
    /// function to finish a task
    pub finishTask: b3FinishTaskCallback,
    /// User context that is provided to enqueueTask and finishTask
    pub userTaskContext: *mut ::std::os::raw::c_void,
    /// User data associated with a world
    pub userData: *mut ::std::os::raw::c_void,
    /** Used to create debug draw shapes. This is called when a shape is
 first drawn using b3DebugDraw.*/
    pub createDebugShape: b3CreateDebugShapeCallback,
    /// Used to destroy debug draw shapes. This is called when a shape is modified or destroyed.
    pub destroyDebugShape: b3DestroyDebugShapeCallback,
    /// This is passed to the debug shape callbacks to provide a user context.
    pub userDebugShapeContext: *mut ::std::os::raw::c_void,
    /// Optional initial capacities
    pub capacity: b3Capacity,
    /// Used internally to detect a valid definition. DO NOT SET.
    pub internalValue: ::std::os::raw::c_int,
}
unsafe extern "C" {
    /** Use this to initialize your world definition
 @ingroup world*/
    pub fn b3DefaultWorldDef() -> b3WorldDef;
}
